# mcp-zingmp3

./: README.md  config.json  mcp_zingmp3.py  pyproject.toml  zmp3.py
