[project]
name = "mcp-zingmp3"
version = "0.1.0"
description = "MCP server cho tìm kiếm và lấy link Zing MP3"
dependencies = [
    "mcp",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
# Đây là lệnh mà uvx sẽ gọi
mcp-zingmp3 = "mcp_zingmp3:main"