[project]
name = "mcp-zingmp3"
version = "0.2.2" # Tăng version nhẹ
description = "MCP server cho Zing MP3 và YouTube Music (Hỗ trợ tải MP3)"
dependencies = [
    "mcp",
    "requests",
    "cloudscraper",
    "ytmusicapi",
    "yt-dlp",
    "static-ffmpeg" # <-- QUAN TRỌNG: Thư viện tự động cài FFmpeg
]
# Chỉ cần build 1 module duy nhất
py-modules = ["mcp_zingmp3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-zingmp3 = "mcp_zingmp3:main"
